--- a/TestProject/Base.lproj/Main.storyboard
+++ b/TestProject/Base.lproj/Main.storyboard
@@ -773,6 +773,29 @@
                                             <segue destination="7ay-vt-KZ5" kind="show" id="RPb-no-dvG"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="60" id="1a5-Qp-ivl">
+                                        <rect key="frame" x="0.0" y="535.5" width="375" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1a5-Qp-ivl" id="wqq-OC-uwJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="59.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="new storyboard" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x8H-hc-iDQ">
+                                                    <rect key="frame" x="12" y="19.5" width="120" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="x8H-hc-iDQ" firstAttribute="centerY" secondItem="wqq-OC-uwJ" secondAttribute="centerY" id="Y0s-0S-d1E"/>
+                                                <constraint firstItem="x8H-hc-iDQ" firstAttribute="leading" secondItem="wqq-OC-uwJ" secondAttribute="leading" constant="12" id="gX3-tg-aPB"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Itd-0r-LGE" kind="show" id="X4n-AI-NEt"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -786,6 +809,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uSA-Bd-8MI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1903" y="60"/>
+        </scene>
+        <!--navVC-->
+        <scene sceneID="rao-bd-LF7">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Navigation" referencedIdentifier="navVC" id="Itd-0r-LGE" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ugs-Yn-lCH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3129" y="-471"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0Ce-7J-HJo">
