--- a/TestProject/Base.lproj/Main.storyboard
+++ b/TestProject/Base.lproj/Main.storyboard
@@ -717,6 +717,114 @@
             </objects>
             <point key="canvasLocation" x="2069.5999999999999" y="59.820089955022496"/>
         </scene>
+        <!--Auto View Controller-->
+        <scene sceneID="oJK-uW-zbi">
+            <objects>
+                <viewController storyboardIdentifier="AutoViewController" id="Yn6-Mz-nyt" customClass="AutoViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iMi-N3-GOt"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ihj-GU-zQ3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2qi-LO-4vN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UOv-Nt-9Xe">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="2h0-Aj-33C">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits" autocorrectionType="no"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="Yn6-Mz-nyt" id="JNJ-5z-qwi"/>
+                                    </connections>
+                                </searchBar>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomAutoTableViewCell" id="Cn5-VF-bHb" customClass="CustomAutoTableViewCell">
+                                        <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Cn5-VF-bHb" id="ZIP-ga-AKA">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kNd-tC-2TZ">
+                                                    <rect key="frame" x="327" y="2" width="40" height="40"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="40" id="Ed4-SF-dFc"/>
+                                                        <constraint firstAttribute="height" constant="40" id="WLf-po-aKi"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Twd-k0-Wy4">
+                                                    <rect key="frame" x="10" y="11" width="80" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="80" id="xSF-ye-SD1"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4qs-cq-S9e">
+                                                    <rect key="frame" x="90" y="11" width="140" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="140" id="DNl-0y-77H"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOl-gg-AUu">
+                                                    <rect key="frame" x="230" y="11" width="97" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Twd-k0-Wy4" firstAttribute="centerY" secondItem="ZIP-ga-AKA" secondAttribute="centerY" id="4eD-bk-OJV"/>
+                                                <constraint firstItem="QOl-gg-AUu" firstAttribute="centerY" secondItem="ZIP-ga-AKA" secondAttribute="centerY" id="C0I-td-6hJ"/>
+                                                <constraint firstItem="kNd-tC-2TZ" firstAttribute="centerY" secondItem="ZIP-ga-AKA" secondAttribute="centerY" id="EY6-az-hqf"/>
+                                                <constraint firstItem="kNd-tC-2TZ" firstAttribute="centerY" secondItem="ZIP-ga-AKA" secondAttribute="centerY" id="Egu-sC-65X"/>
+                                                <constraint firstItem="QOl-gg-AUu" firstAttribute="leading" secondItem="4qs-cq-S9e" secondAttribute="trailing" id="EoR-I1-9ms"/>
+                                                <constraint firstItem="4qs-cq-S9e" firstAttribute="centerY" secondItem="ZIP-ga-AKA" secondAttribute="centerY" id="HBM-Ge-E4N"/>
+                                                <constraint firstItem="kNd-tC-2TZ" firstAttribute="leading" secondItem="QOl-gg-AUu" secondAttribute="trailing" id="Skv-1e-j5F"/>
+                                                <constraint firstAttribute="trailing" secondItem="kNd-tC-2TZ" secondAttribute="trailing" constant="8" id="VJn-iF-dpX"/>
+                                                <constraint firstItem="4qs-cq-S9e" firstAttribute="leading" secondItem="Twd-k0-Wy4" secondAttribute="trailing" id="c4t-Qb-Xbr"/>
+                                                <constraint firstItem="Twd-k0-Wy4" firstAttribute="leading" secondItem="ZIP-ga-AKA" secondAttribute="leading" constant="10" id="nRZ-sj-mON"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="brandLabel" destination="Twd-k0-Wy4" id="wjW-bj-10N"/>
+                                            <outlet property="colorView" destination="kNd-tC-2TZ" id="rsj-ex-fY5"/>
+                                            <outlet property="modelLabel" destination="4qs-cq-S9e" id="qa4-sT-ctK"/>
+                                            <outlet property="yearLabel" destination="QOl-gg-AUu" id="y7k-Dn-B2t"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Yn6-Mz-nyt" id="mgk-wm-6dw"/>
+                                    <outlet property="delegate" destination="Yn6-Mz-nyt" id="XTs-k1-pUC"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="UOv-Nt-9Xe" secondAttribute="trailing" id="TZC-iy-vH2"/>
+                            <constraint firstItem="Ihj-GU-zQ3" firstAttribute="top" secondItem="UOv-Nt-9Xe" secondAttribute="bottom" id="Zty-oB-YBa"/>
+                            <constraint firstItem="UOv-Nt-9Xe" firstAttribute="leading" secondItem="2qi-LO-4vN" secondAttribute="leading" id="fSd-n1-fp1"/>
+                            <constraint firstItem="UOv-Nt-9Xe" firstAttribute="top" secondItem="2qi-LO-4vN" secondAttribute="top" id="hpn-ys-fdN"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="searchBar" destination="2h0-Aj-33C" id="DKb-PA-MZf"/>
+                        <outlet property="tableView" destination="UOv-Nt-9Xe" id="0eO-8C-e2l"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="soK-a0-b5D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3567.1999999999998" y="-1025.0374812593705"/>
+        </scene>
         <!--Root View Controller-->
         <scene sceneID="N2a-mR-Pz6">
             <objects>
@@ -1018,6 +1126,29 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="60" id="VFw-g1-cL2">
+                                        <rect key="frame" x="0.0" y="775.5" width="375" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VFw-g1-cL2" id="pKi-Ez-DpB">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="59.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Auto" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VFd-cg-fxb">
+                                                    <rect key="frame" x="12" y="19.5" width="36" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="VFd-cg-fxb" firstAttribute="centerY" secondItem="pKi-Ez-DpB" secondAttribute="centerY" id="0VQ-Pi-AX7"/>
+                                                <constraint firstItem="VFd-cg-fxb" firstAttribute="leading" secondItem="pKi-Ez-DpB" secondAttribute="leading" constant="12" id="FbV-or-k4s"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Yn6-Mz-nyt" kind="show" id="Jke-0f-U9I"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -1030,7 +1161,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uSA-Bd-8MI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1903.2" y="59.820089955022496"/>
+            <point key="canvasLocation" x="-4346" y="-163"/>
         </scene>
         <!--navVC-->
         <scene sceneID="rao-bd-LF7">
@@ -1038,7 +1169,7 @@
                 <viewControllerPlaceholder storyboardName="Navigation" referencedIdentifier="navVC" id="Itd-0r-LGE" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ugs-Yn-lCH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3129" y="-471"/>
+            <point key="canvasLocation" x="-1618" y="-451"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0Ce-7J-HJo">
@@ -1054,7 +1185,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xli-sO-fHZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2866" y="60"/>
+            <point key="canvasLocation" x="-5310" y="-163"/>
         </scene>
         <!--AnimationV2 View Controller-->
         <scene sceneID="rk6-xY-IV5">
@@ -1072,7 +1203,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gyv-5k-Ap3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2338" y="-1012"/>
+            <point key="canvasLocation" x="-1618" y="-949"/>
         </scene>
         <!--Animation View Controller-->
         <scene sceneID="3lW-Wt-m4D">
